tests/snapshots/ui_queue_render_states__queue_with_played_tracks_uses_played_style.snap
---
source: tests/ui_queue_render_states.rs
expression: frame
---
 F1 Library   F2 Queue   F3 Quick Play   F4 Playlists   F5 Server   F6 Settings 
                                                              ⏮︎   ⏵︎   ⏸︎   ⏹︎   ⏭︎ 
┌ Queue (3) ───────────────────────────────────────────────────────────────────┐
│  1.     A - Artist [03:00]                                                   │
│  2.     B - Artist [03:00]                                                   │
│  3. ▶   C - Artist [03:00]                                                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Now Playing ─────────────────────────────────────────────────────────────────┐
│                               No track playing                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
q:Quit │ p/Space:Pause │ h:Prev │ l:Next │ r:Repeat (off) │ y:Lyrics            
Shift+T:Shuffle library                                                         
n:Star playing │ m:Star selected │ d:Remove │ J/K:Move │ t:Shuffle              
s:Save playlist │ c:Clear history │ Enter:Play
