tests/snapshots/ui_queue_render_states__queue_with_track_number_only_renders_hash_track.snap
---
source: tests/ui_queue_render_states.rs
expression: frame
---
 F1 Library   F2 Queue   F3 Quick Play   F4 Playlists   F5 Server   F6 Settings 
                                                              ⏮︎   ⏵︎   ⏸︎   ⏹︎   ⏭︎ 
┌ Queue (1) ───────────────────────────────────────────────────────────────────┐
│  1.     A [#7] - Artist [03:00]                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Now Playing ─────────────────────────────────────────────────────────────────┐
│                               No track playing                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
q:Quit │ p/Space:Pause │ h:Prev │ l:Next │ r:Repeat (off) │ y:Lyrics            
Shift+T:Shuffle library                                                         
n:Star playing │ m:Star selected │ d:Remove │ J/K:Move │ t:Shuffle              
s:Save playlist │ c:Clear history │ Enter:Play
